fixed activity panels on small window sizes

--- a/smallDMchannelList.css
+++ b/smallDMchannelList.css
@@ -188,6 +188,86 @@
     height: 20px;
   }
 }
+@media (max-width: 700px) {
+  .panels-3wFtMD .panel-2ZFCRb.activityPanel-9icbyU .actions-zk2vB_,
+  .panels-3wFtMD .panel-2ZFCRb.activityPanel-9icbyU .info-88fTUI,
+  .panels-3wFtMD .container-6sXIoE.withTimeline-824fT_ .flex-2S1XBF,
+  .panels-3wFtMD .container-6sXIoE.withTimeline-824fT_ .timeline-UWmgAx .barText-lmqc5O>:nth-child(2),
+  .panels-3wFtMD .nameTag-sc-gpq {
+    display: none;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:hover .actionButtons-2vEOUh,
+  .panels-3wFtMD .panel-2ZFCRb.activityPanel-9icbyU:hover .actions-zk2vB_,
+  .panels-3wFtMD .panel-2ZFCRb.activityPanel-9icbyU:hover .info-88fTUI,
+  .panels-3wFtMD .container-6sXIoE.withTimeline-824fT_:hover .flex-2S1XBF,
+  .panels-3wFtMD .container-6sXIoE.withTimeline-824fT_:hover .timeline-UWmgAx .barText-lmqc5O>:nth-child(2) {
+    display: flex;
+  }
+  #app-mount .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh .button-f2h6uQ .flex-2S1XBF {
+    font-size: 0px;
+  }
+  .panels-3wFtMD {
+    pointer-events: none;
+  }
+  .panels-3wFtMD > * {
+    pointer-events: all;
+  }
+  #app-mount .panels-3wFtMD .wrapper-3Hk9OB {
+    width: 56px;
+    max-width: unset;
+    transition: width .5s;
+  }
+  #app-mount .panels-3wFtMD .wrapper-3Hk9OB:hover {
+    width: 240px;
+  }
+  .panels-3wFtMD > .container-YkUktl > .flex-2S1XBF {
+    border-radius: 18px;
+    padding: 2px;
+  }
+  #app-mount .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh > .button-f2h6uQ:first-child,
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN > .flex-2S1XBF > .flex-2S1XBF > .button-12Fmur:first-of-type,
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN .inner-llGtyq .rtcConnectionStatus-c5A6Av + a, 
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN .inner-llGtyq .rtcConnectionStatus-c5A6Av > :not(.ping-2IpLcU) {
+    display: none;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh .button-1EGGcP *,
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh .button-1EGGcP {
+    width: 20px;
+    height: 20px;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN .connection-3k9QeF .button-12Fmur, 
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh .button-1EGGcP {
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    min-width: unset;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN,
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN > .flex-2S1XBF > .flex-2S1XBF,
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .container-1zzFcN > .flex-2S1XBF {
+    display: flex;
+    flex-direction: column;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh {
+    padding: 0;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:hover .voiceTimer {
+    width: 160px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh .button-1EGGcP .buttonIcon-2Zsrs2 {
+    width: 20px;
+    height: 20px;
+    transition: all 0.5s;
+  }
+  .panels-3wFtMD .wrapper-3Hk9OB:not(:hover) .actionButtons-2vEOUh .button-1EGGcP .contents-3ca1mk {
+    padding: 6px;
+  }
+}
 .sidebar-1tnWFu:not(:hover) .container-1zzFcN .connection-3k9QeF .flex-2S1XBF {
   margin: 0px;
 }
@@ -331,44 +411,44 @@
 }
 /*ServerBar*/
 @media (max-width: 700px) {
-.guilds-2JjMmN {
-  width: 56px;
-}
-.guilds-2JjMmN .wrapper-z5ab_q {
-  height: calc(56px * 0.625);
-}
-.guilds-2JjMmN .wrapper-z5ab_q span {
-  max-height: calc(56px * 0.375);
-}
-.guilds-2JjMmN div[style*='height: 56px'],
-.guilds-2JjMmN [role='group'] {
-  height: auto !important;
-}
-.guilds-2JjMmN .listItem-GuPuDH,
-.guilds-2JjMmN [class*='unreadMentionsIndicator'],
-.guilds-2JjMmN .wrapper-3Njo_c {
-  width: 100%;
-}
-.guilds-2JjMmN .wrapper-28eC3z,
-.guilds-2JjMmN [class*='guildsError-'],
-.guilds-2JjMmN svg[width='48'] {
-  width: calc(56px * 0.625);
-  height: calc(56px * 0.625);
-}
-.guilds-2JjMmN .wrapper-3Njo_c > span {
-  left: calc(56px * 0.175);
-  width: calc(56px * 0.625);
-}
-.guilds-2JjMmN #bd-pub-button {
-  height: calc(56px * 0.375);
-  line-height: calc(56px * 0.375);
-  font-size: 10px;
-}
-.listItem-3SmSlK {
-  width: 56px;
-}
-.expandedFolderBackground-1kSAf6 {
-  left: calc(56px * 0.2);
-  width: calc(56px * 0.625);
-}
+  .guilds-2JjMmN {
+    width: 56px;
+  }
+  .guilds-2JjMmN .wrapper-z5ab_q {
+    height: calc(56px * 0.625);
+  }
+  .guilds-2JjMmN .wrapper-z5ab_q span {
+    max-height: calc(56px * 0.375);
+  }
+  .guilds-2JjMmN div[style*='height: 56px'],
+  .guilds-2JjMmN [role='group'] {
+    height: auto !important;
+  }
+  .guilds-2JjMmN .listItem-GuPuDH,
+  .guilds-2JjMmN [class*='unreadMentionsIndicator'],
+  .guilds-2JjMmN .wrapper-3Njo_c {
+    width: 100%;
+  }
+  .guilds-2JjMmN .wrapper-28eC3z,
+  .guilds-2JjMmN [class*='guildsError-'],
+  .guilds-2JjMmN svg[width='48'] {
+    width: calc(56px * 0.625);
+    height: calc(56px * 0.625);
+  }
+  .guilds-2JjMmN .wrapper-3Njo_c > span {
+    left: calc(56px * 0.175);
+    width: calc(56px * 0.625);
+  }
+  .guilds-2JjMmN #bd-pub-button {
+    height: calc(56px * 0.375);
+    line-height: calc(56px * 0.375);
+    font-size: 10px;
+  }
+  .listItem-3SmSlK {
+    width: 56px;
+  }
+  .expandedFolderBackground-1kSAf6 {
+    left: calc(56px * 0.2);
+    width: calc(56px * 0.625);
+  }
 }
